[merephotos] final updates
