# swagger.yaml
@@ -39,6 +39,10 @@ paths:
           required: true
           type: file
       responses:
+        200':
+          description: successful operation
+          schema:
+            $ref: '#/definitions/ImageMeta'
         '400':
           description: invalid file type - only images are supported
     get:
